--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
